<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_hot_line"
        android:enabled="true"
        android:icon="@drawable/phone_btn_bar"
        android:title="@string/lbl_hotline"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_news"
        android:enabled="true"
        android:icon="@drawable/new_btn_bar"
        android:title="@string/lbl_news"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_football"
        android:enabled="true"
        android:icon="@drawable/ic_football"
        android:title="@string/lbl_football"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_fortune"
        android:enabled="true"
        android:icon="@drawable/ic_horoscope"
        android:title="@string/lbl_fortune"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_beauty_tip"
        android:enabled="true"
        android:icon="@drawable/ic_beauty_tip"
        android:title="@string/lbl_beauty_tip"
        app:showAsAction="ifRoom"/>

</menu>